--- a/package.json
+++ b/package.json
@@ -8,13 +8,20 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.1",
+    "firebase": "^8.6.8",
     "next": "latest",
+    "next-auth": "^3.27.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^3.0.4",
+    "tailwindcss-filters": "^3.0.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.4",
     "postcss": "^8.1.10",
+    "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^2.1.1"
   }
 }
